* Add FileResolver/ResolverUser to detect and re-read changed property files (CC-952). Patch by Daniel Tihelka. 
* BuildOutputLogger with multiple builds interfere with each other with multiple threads (CC-911). Patch by Grzegorz Olędzki. 
  Additional changes to support 'liveOutput' (visible in Dashboard) and 'showProgress' (visible in JSP) from all builders. See CC-911 for details.

AntBuilder
----------------------
* Fix possible build failure due to NPE in AntOutputLogger (CC-913). Patch by Ivan "Rambius" Ivanov.

CMSynergyBaselinePublisher
----------------------
* Allow property resolution in build attribute (CC-973).

EmailPublisher
----------------------
* Add support for sending build notification emails without requiring an SMTP relay server (CC-981). Patch by Kent R. Spillner.
* Add default buildresultsurl attribute on email publishers (CC-982). Patch by Kent R. Spillner.

Harvest
----------------------
* Improvements to AllFusionHarvest integration to support promotion/demotion of versions and additional properties (CC-808). Patch by Robert Thornburrow and David Letcher.

LinkEmailPublisher
----------------------
* LinkEmailPublisher outputs links which do not work with the new dashboard (CC-809). Patch by Robert Thornburrow.

Maven2Builder
----------------------
* Add showBuildOutput property to show builder output in Dashboard while build is executing (CC-966). Patch by Jeff Johnson. Tested by Paolo D'Apice. This all may change if we use Dependency Injection or add showBuildOutput to the base Builder class.

Dashboard
======================
* Add guard for NPE in BuildLoopQueryService, as per comment in CC-831. Suggested by David Williams.
* Change dashboard 'start.jetty.server' target to use /tmp under MacOS Snow Leopard, avoiding 'path with characters' error (CC-976). Patch by Antoine Levy Lambert. 

reporting jsp app
======================
* Show CruiseControl version string (if available) on index and main jsp pages.

contrib
======================